objects/Payment_history_configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Country_code__c</fullName>
        <label>Country code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_free_trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show free trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_type__c</fullName>
        <label>Subscription type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Payment history configuration</label>
</CustomObject>